User image align bugfix

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -8,6 +8,7 @@
 
 .gh-username img{
   width: 32px;
+  vertical-align: middle;
 }
 
 #profile-bio{
